--- a/NovaMarket/app/css/estilosMenuAdmin.css
+++ b/NovaMarket/app/css/estilosMenuAdmin.css
@@ -1,4 +1,17 @@
-﻿.wrapper {
+﻿body {
+}
+
+.imagen {
+    float: none;
+}
+
+.align {
+    float: none;
+    margin-left: 14%;
+    margin-right: 10%;
+}
+
+.wrapper {
     display: flex;
     width: 100%;
     align-items: stretch;
@@ -36,16 +49,46 @@ a[data-toggle="collapse"] {
     transform: translateY(-50%);
 }
 
+@media screen and (max-width:1155px) {
+    img {
+        width: 1000px;
+    }
+}
+
+@media screen and (max-width:998px) {
+    img {
+        width: 800px;
+    }
+}
+
+@media screen and (max-width:841px) {
+    img {
+        width: 600px;
+    }
+}
+
 @media (max-width: 768px) {
     #sidebar {
-        margin-left: -250px;
+        min-width:100%;
     }
-
+    .wrapper{
+        float:right;
+    }
         #sidebar.active {
             margin-left: 0;
         }
+    img{
+        display:none;
+    }
+    #sidebarCollapse{
+        display:none;
+    }
 }
-
+@media screen and (max-width:841px) {
+    img {
+        width: 600px;
+    }
+}
 
 body {
     font-family: 'Poppins', sans-serif;
@@ -59,22 +102,27 @@ p {
     line-height: 1.7em;
     color: #999;
 }
-.icono{
-    float:right;
+
+.icono {
+    float: right;
 }
+
 a, a:hover, a:focus {
     color: inherit;
     text-decoration: none;
     transition: all 0.3s;
 }
-.row{
-    margin-left:2%;
+
+.row {
+    margin-left: 2%;
 }
-.aside{
-    background:#428BCA;
-    color:#fff;
-    margin-top:0px;
+
+.aside {
+    background: #428BCA;
+    color: #fff;
+    margin-top: 0px;
 }
+
 #sidebar {
     /* don't forget to add all the previously mentioned styles here too */
     background: #428BCA;
