--- a/NovaMarket/app/css/estilosRegistro.css
+++ b/NovaMarket/app/css/estilosRegistro.css
@@ -107,6 +107,16 @@ legend {
 
 /*ComboBox*/
 
+.select{
+    width:100%;
+    height:35px;
+    background:none;
+    cursor:pointer;
+    border-radius:5px;
+    transition:ease-in;
+    transition-duration:3s;
+}
+
 select{
     width:100%;
     height:35px;
